--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
 
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Font awesome -->
     <link
@@ -60,7 +55,7 @@
               <p class="card-text">
                 <small class="text-muted">by</small>
                 <small data-id="author" class="text-muted font-weight-bold">
-                  Hau Nguyen
+                  Tung Nguyen
                 </small>
                 <small data-id="timeSpan" class="text-muted">
                   - 3 mins ago
@@ -94,7 +89,7 @@
         <div class="container">
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav__link" href="">
                 <img
                   class="nav__logo"
                   src="images/logo.svg"
@@ -104,7 +99,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="add-edit-post.html"
+              <a class="nav__link" href="add-edit-post.html"
                 ><i class="fas fa-plus-circle mr-1"></i>Add new post</a
               >
             </li>
@@ -114,6 +109,49 @@
     </header>
 
     <main>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://picsum.photos/id/16/1378/400" class="d-block w-100" alt="Sea">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="https://picsum.photos/id/20/1378/400" class="d-block w-100" alt="Work space">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="https://picsum.photos/id/24/1378/400" class="d-block w-100" alt="Book">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
       <section class="posts-section">
         <div class="container">
           <h1 class="with-underline text-center">Latest posts</h1>
@@ -142,8 +180,7 @@
                     <p class="card-text">
                       <small class="text-muted">by</small>
                       <small class="text-muted font-weight-bold"
-                        >Hau Nguyen</small
-                      >
+                        >Tung Nguyen</small>
                       <small class="text-muted">- 3 mins ago</small>
                     </p>
                   </div>
@@ -190,6 +227,9 @@
     <footer class="text-center text-muted py-3">
       <small>Created by Po with <i class="fas fa-heart"></i></small>
     </footer>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Scripts should be placed here to prevent blocking render UI -->
     <script type="module" src="/js/main.js"></script>
