--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -131,7 +131,7 @@
               </div>
 
               <div class="text-center">
-                <button class="btn btn-primary">
+                <button name="submit" class="btn btn-primary">
                   <i class="fas fa-save mr-1"></i> Save
                 </button>
               </div>
